<resources>
    <string name="app_name">SAID</string>
    <string name="action_settings">Settings</string>
    <string name="app_logo">App Logo</string>
    <string name="web_client_id">332004587106-us7m55n3lb1gitgp4go6n51gq6tccsoh.apps.googleusercontent.com </string>
    <!-- Strings used for fragments for navigation -->
    <string name="dashboard_fragment_label">DashboardFragment</string>
    <string name="chat_fragment_label">SecondFragment</string>
    <string name="news_fragment_label">NewsFragment</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="acronym">STROKE AID INTELLIGENCE DISPATCHER</string>
    <string name="mulai_scanning">Mulai \nScanning</string>
    <string name="arrow_back">arrow back</string>
    <string name="bot_name">Said bot</string>
    <string name="suggest_chat_1">Apa itu stroke?</string>
    <string name="suggest_chat_2">Penyebab stroke?</string>
    <string name="suggest_chat_3">Bagaimana metode deteksi?</string>
    <string name="suggest_chat_4">Apakah lajajah jokowi asi?</string>
    <string name="suggest_chat_5">Apakah ijajah jokowi asi?</string>
    <string name="suggest_chat_6">Apakah...</string>
    <string name="logo_aplikasi_desc">Logo Aplikasi</string>
    <string name="input_text_email">Email</string>
    <string name="input_text_password">Kata Sandi</string>
    <string name="user_icon">user icon</string>
    <string name="welcome_text">Selamat Datang, %1$s</string>
    <string name="dashboard_search_bar_hint">Cari tahu tentang stroke disisni...</string>
    <string name="conten_desc_search_bar">Search bar</string>
    <string name="home_score_title">Screening Score Anda</string>
    <string name="home_restart">Restart</string>
    <string name="home_score_status_normal">jenis risiko</string>
    <string name="home_feature_title">Fitur Kami</string>
    <string name="home_news_title">Berita Terkini</string>
    <string name="content_desc_more">Lebih lanjut</string>
    <string name="content_desc_news_image">Konten Edukasi</string>
    <string name="feature_chatbot">Chatbot</string>
    <string name="feature_darurat">Darurat</string>
    <string name="feature_screening">Screening</string>
    <string name="feature_edukasi">Edukasi</string>
    <string name="signing_up">Signing up...</string>
    <string name="creating_account">Creating account...</string>
    <string name="sign_up_notif">Sign Up</string>
    <string name="google_btn_helper">Google</string>
    <string name="session">%1$d sesi</string>
    <string name="news_title_stroke_world">Berita Dunia Stroke\n</string>
    <string name="news_section_edukasi">Edukasi Stroke</string>
    <string name="news_section_pencegahan">Pencegahan Stroke</string>
    <string name="username">Username</string>
    <string name="Age">29</string>
    <string name="createdDate">Tanggal Bergabung</string>
    <string name="createdDate_desc">----</string>
    <string name="change_photo">Edit Foto</string>
    <string name="profile_photo">profile foto</string>
    <string name="articleTitle">Judul Berita</string>
    <string name="article_cover">cover artikel</string>
    <string name="bookmark">bookmark icon</string>
    <string name="share_article">share icon</string>
    <string name="article_author">nama author artikel\n</string>
    <string name="article_author_role">author role</string>
    <string name="HeadlineTemplate">NEWS !!!</string>
    <string name="articleDate">20 April 2009, 11 PM</string>
    <string name="article_author_default">article author</string>
    <string name="article_lorem_long">News Title Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet News Title Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet News Title Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet News Title Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet News Title Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet News Title Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet News Title Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet News Title Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet\n\nNews Title Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet News Title Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet News Title Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit AmetNews Title Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet News Title Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet News Title Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet</string>
    <string name="bookmarked_msg">artikel berhasil di tandai</string>
    <string name="headline_newsHeader">HEADLINE</string>
    <string name="retry">Ulangi</string>
    <string name="mic_hint">Tahan untuk berbicara</string>
    <string name="rec_hint">Lepas untuk mengirim • Geser ke atas untuk batal</string>
    <string name="rec_hint_2">Lepas untuk BATALKAN</string>
    <string name="pre_test_reminder">Bersiap… tes akan dimulai dalam 3 detik</string>
    <string name="test_hint">Tahan posisi sampai hitungan selesai…</string>
    <string name="fail_detected">kemiringan/jatuh terdeteksi.</string>
    <string name="finish_correctly">stabil (10 detik).</string>
    <string name="hint_result">Konfirmasi hasil atau ulangi tes.</string>
    <string name="history_navigation_link">Lihat Riwayat Screening</string>
    <string name="logging_out">Logging out...</string>
    <string name="logout_success">Logout Berhasil</string>
    <string name="logout">Logout</string>
    <string name="logout_failed_try_again">Logout bermasalah silahkan ulangi lain kali</string>
    <string name="slider_label">Geser untuk membatalkan...</string>
    <string name="reminder_handler_daily_true">Pengingat akan dikirim setiap hari pukul %1$s</string>
    <string name="emergency_number">+628159445670</string>
    <string name="emergency_noresponse_hint">Jika tidak ada respons, aplikasi akan menghubungi kontak darurat dan mengirim lokasi Anda.</string>
    <string name="emergency_phone_status_ready">SEDANG BERBICARA DENGAN PETUGAS</string>
    <string name="emergency_phone_status_notready">TELEPON SEDANG BERDERING...</string>
    <string name="emergency_phone_status_finish">PROSES DARURAT SELESAI</string>
    <string name="emergency_finish_hint">Panggilan darurat telah selesai.</string>
</resources>