<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logoScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".OpeningActivity">

    <ImageView
        android:id="@+id/imageViewAppLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/icon_foreground"
        android:contentDescription="@string/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/imageViewAppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/imageViewAppName"
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/app_name"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/textViewAcronym"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAppLogo" />

    <TextView
        android:id="@+id/textViewAcronym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/acronym"
        android:textSize="11sp"
        android:textStyle="bold"
        android:textIsSelectable="false"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAppName" />

</androidx.constraintlayout.widget.ConstraintLayout>